--- a/src/content/experiments/book/components/BookLayout.astro
+++ b/src/content/experiments/book/components/BookLayout.astro
@@ -39,6 +39,7 @@ import BookScrollNote from "./BookScrollNote.astro";
       Times,
       Source Serif Pro,
       serif;
+    color: #ffc132;
     animation: info-scroll-fade linear forwards;
     animation-timeline: scroll(root);
     animation-range: 0% 4%;
