--- a/src/content/experiments/characters/components/CharacterInfo.astro
+++ b/src/content/experiments/characters/components/CharacterInfo.astro
@@ -3,7 +3,7 @@ import CharacterControls from "./CharacterControls.astro";
 ---
 
 <details class="info" open>
-  <summary class="info-caption">Info</summary>
+  <summary class="info-caption">Details</summary>
   <p class="prompt info-item">Move the cursor or click/tap somewhere</p>
   <div class="info-item">
     <CharacterControls items={["woman", "man", "adventurer", "orc", "soldier", "robot"]} />
