--- a/src/content/experiments/book/styles.css
+++ b/src/content/experiments/book/styles.css
@@ -63,12 +63,13 @@
 /* preload images */
 .wrapper::after {
   content: "";
-  visibility: hidden;
   width: 1px;
   height: 1px;
   position: absolute;
   animation: preload-images 0.1s;
   animation-delay: 1s;
+  opacity: 0.1;
+  z-index: -1;
 }
 
 @keyframes preload-images {
