--- a/src/content/experiments/characters/styles.scss
+++ b/src/content/experiments/characters/styles.scss
@@ -65,7 +65,6 @@ $maxShadowRotateX: 90;
   --fly-pos-y: -15vh;
 }
 
-// id fly sky-b-color sky-t-color ground-color
 $characters: "woman" "📱" "#91d8e8" "#2e93cc" "#7fba2b",
   "man" "🎮" "#91d8e8" "#2e93cc" "#7fba2b",
   "soldier" "🧨" "#bbf6f7" "#59d7ef" "#dac43e",
@@ -126,6 +125,7 @@ $characters: "woman" "📱" "#91d8e8" "#2e93cc" "#7fba2b",
       var(--ground-stripe-color) 40px,
       var(--ground-stripe-color) 42px),
     linear-gradient(0deg, var(--ground-base-color) 0%, var(--ground-far-color) 100%);
+  background-size: 100% 47px, 42px, 100%;
   rotate: x 85deg;
   scale: 3 1 1;
   transform-origin: bottom;
@@ -147,18 +147,25 @@ $characters: "woman" "📱" "#91d8e8" "#2e93cc" "#7fba2b",
 .character {
   perspective-origin: top;
   perspective: 1000px;
-  scale: 0.8;
+  scale: var(--character-scale, 0.7);
+}
+
+@media (width >=64rem) {
+  .character {
+    --character-scale: 0.8;
+  }
 }
 
 /* preload images */
 .character::before {
   content: "";
-  visibility: hidden;
   width: 1px;
   height: 1px;
   position: absolute;
   animation: preload-images 0.1s;
   animation-delay: 1s;
+  opacity: 0.1;
+  z-index: -1;
 }
 
 @keyframes preload-images {
@@ -219,6 +226,7 @@ $characters: "woman" "📱" "#91d8e8" "#2e93cc" "#7fba2b",
   background-image: var(--character-texture);
   background-repeat: no-repeat;
   transition: filter .3s linear;
+  backface-visibility: hidden;
 }
 
 .part-side-left,
