--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -22,7 +22,7 @@ const { tags } = Astro.props;
     font-weight: 600;
     padding: 0 var(--spacing-1);
     background-color: light-dark(var(--color-gray-400), var(--color-gray-600));
-    color: light-dark(var(--color-white), var(--color-gray-300));
+    color: light-dark(white, var(--color-gray-300));
     border-radius: 0.4em;
     transition: var(--transition-theme);
   }
