--- a/src/pages/experiments/index.astro
+++ b/src/pages/experiments/index.astro
@@ -11,7 +11,13 @@ const experiments = await getSortedPosts("experiments");
   <SectionLayout title="Experiments" as="h1" icon="flask">
     {
       experiments.map(({ id, data }) => (
-        <Post title={data.title} link={`/experiments/${id}/`} description={data.description} tags={data.tags} />
+        <Post
+          title={data.title}
+          link={`/experiments/${id}/`}
+          description={data.description}
+          tags={data.tags}
+          preview={data.preview}
+        />
       ))
     }
   </SectionLayout>
