--- a/src/layouts/DemoLayout.astro
+++ b/src/layouts/DemoLayout.astro
@@ -1,6 +1,7 @@
 ---
 import "@/styles/demo.css";
 
+import { ClientRouter } from "astro:transitions";
 import Meta from "@/components/Meta.astro";
 
 interface Props {
@@ -12,9 +13,10 @@ interface Props {
 const { title, description, ogImage } = Astro.props;
 ---
 
-<html lang="en">
+<html lang="en" transition:animate="fade">
   <head>
     <Meta title={title} description={description} ogImage={ogImage} />
+    <ClientRouter />
   </head>
   <body>
     <slot />
