--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -11,7 +11,13 @@ const projects = await getSortedPosts("projects");
   <SectionLayout title="Projects" as="h1" icon="atom">
     {
       projects.map(({ id, data }) => (
-        <Post title={data.title} link={`/projects/${id}/`} description={data.description} tags={data.tags} />
+        <Post
+          title={data.title}
+          link={`/projects/${id}/`}
+          description={data.description}
+          tags={data.tags}
+          preview={data.preview}
+        />
       ))
     }
   </SectionLayout>
