--- a/src/components/Popover.astro
+++ b/src/components/Popover.astro
@@ -21,11 +21,12 @@ const { id } = Astro.props;
   }
 
   .popover {
+    --vertical-shift: calc(100% + 0.2rem);
+
     position: absolute;
     padding: var(--spacing-2);
     width: fit-content;
-    left: 50%;
-    translate: -50% 0;
+    left: 110%;
     visibility: hidden;
     opacity: 0;
     transition:
@@ -33,44 +34,33 @@ const { id } = Astro.props;
       opacity 0.2s;
     background-color: var(--color-bg-secondary);
     border-radius: 0.4rem;
-    filter: drop-shadow(1px 1px 7px rgb(0 0 0 / 0.2));
+    box-shadow: 1px 1px 7px rgb(0 0 0 / 0.2);
     z-index: 1;
     pointer-events: none;
+  }
+
+  @media (width < 48rem) {
+    .popover {
+      left: 50%;
+      translate: -50% 0;
+    }
   }
 
   .popover :global(img) {
     max-width: 15rem;
   }
 
-  .popover::after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    translate: -50% 0;
-    border: 0.7rem solid transparent;
+  .popover[data-position="top"] {
+    bottom: var(--vertical-shift);
   }
 
-  .popover[data-position="top"]::after {
-    bottom: -1.38rem;
-    border-top-color: var(--color-bg-secondary);
-  }
-
-  .popover[data-position="bottom"]::after {
-    top: -1.38rem;
-    border-bottom-color: var(--color-bg-secondary);
+  .popover[data-position="bottom"] {
+    top: var(--vertical-shift);
   }
 
   .popover-container:has(.popover-anchor:is(:hover, :focus-visible)) .popover {
     visibility: visible;
     opacity: 1;
-  }
-
-  .popover[data-position="top"] {
-    bottom: calc(100% + 0.4rem);
-  }
-
-  .popover[data-position="bottom"] {
-    top: calc(100% + 0.4rem);
   }
 </style>
 
@@ -78,7 +68,12 @@ const { id } = Astro.props;
   const interectionCallback = (entries: IntersectionObserverEntry[]) => {
     entries.forEach(({ target, isIntersecting, boundingClientRect, intersectionRect }) => {
       if (!isIntersecting) {
-        (target as HTMLDivElement).dataset.position = boundingClientRect.top < intersectionRect.top ? "bottom" : "top";
+        const topTouch = boundingClientRect.top < intersectionRect.top;
+        const bottomTouch = boundingClientRect.bottom > intersectionRect.bottom;
+
+        if (!topTouch && !bottomTouch) return;
+
+        (target as HTMLDivElement).dataset.position = topTouch ? "bottom" : "top";
       }
     });
   };
